# saskatchewan-glacier-albedo-analysis

./: .flake8  .gitignore  CLAUDE.md  DASHBOARD_PLAN.md  README.md  STREAMLIT_README.md  TREND_ANALYSIS_COMPARISON_REPORT.md  TREND_ANALYSIS_README.md  __init__.py  albedo_trend_analysis.py  chart_generator.py  config.py  custom_analysis.py  dashboard.py  dashboard_components.py  dashboard_simple.py  data_handler.py  example_usage.py  helpers.py  interactive_menu.py  main.py  migrate_to_organized_structure.py  monthly_visualizer.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  requirements_trend_analysis.txt  run_analysis.py  run_dashboard.py  run_vscode.py  saskatchewan_albedo_statistics_report.docx  saskatchewan_glacier_albedo_analysis_complete.js  saskatchewan_glacier_albedo_analysis_with_fractions.js  setup.py  simple_albedo_analysis_20250623_154111.RData  streamlit_app.py  test_dashboard_structure.py  test_elevation_analysis.py  test_pixel_coverage.js  (+2 more)
.claude/: settings.local.json
.serena/: project.yml
analysis/: advanced.py  comparison.py  elevation_analysis.py  pixel_analysis.py  seasonal.py  spatial.py  trend_strategies.py  trends.py
config/: __init__.py  settings.py
dashboard/: README.md  academic_dashboard.py  academic_plots.py  app.py  app_enhanced.py  complete_interactive_dashboard.py  components.py  debug_dashboard.py  debug_timeseries.py  export_manager.py  final_interactive_dashboard.py  interactive_academic_dashboard.py  plots.py  run_academic_dashboard.py  run_dashboard.bat  run_dashboard.py  run_interactive_dashboard.py  (+8 more)
(+184 files in other folders)
